# qfoundry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  agent_system_prompt.txt  demo_agent_notebook.ipynb  generated_design_v2.ipynb  mkdocs.yml  pyproject.toml
docs/: changelog.md  getting-started.md  index.md  josephson.md  qubits.md  references.md  resonator.md  simulation.md
src/qfoundry/: setup.py
src/qfoundry/qfoundry/: PDK.py  __init__.py  circuit.py  coloring.py  cpw_resonator.py  edges.py  filters.py  josephson.py  qubits.py  resonator.py  topology.py  transmon.py  utils.py  waveguides.py
src/qfoundry/qfoundry.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
src/qfoundry/qfoundry/agent/: __init__.py  generator.py  interface.py  mock_client.py  prompts.py  schema.py
src/qfoundry/qfoundry/simulation/: __init__.py  capacitance.py
